# dlcourse_ai

./: .gitignore  main.py  pyproject.toml
assignments/assignment1/: KNN.ipynb  Linear classifier.ipynb  gradient_check.py  knn.py  linear_classifer.py  metrics.py
assignments/assignment2/: Neural Network.ipynb  PyTorch.ipynb  gradient_check.py  layers.py  metrics.py  model.py  optim.py  trainer.py
assignments/assignment3/: CNN.ipynb  PyTorch_CNN.ipynb  layers.py  metrics.py  model.py
